Fixing issues in email confirmation funtionality. Adding new component in the front end application.
