# BookingWebAPI/BookingWebAPI.Common/Constants/ApplicationConstants.cs
@@ -78,12 +78,9 @@
                <div>
                  <p><b>Hi ##userFirstName##!</b></p>
                  <p>A new ez-booking account has been created for this e-mail address. You have to activate it first in order to get an access. To do this, you have to click on the link below:</p>
-                 <form method=""post"" action=""##confrimUserLink##"" class=""inline"">
-                   <input type=""hidden"" name=""confirmationAttemptId"" value=""##confirmationAttemptId##"">
-                   <button type=""submit"" name=""submit_param"" value=""submit_value"" class=""link-button"">
-                     Confirm your e-mail address
-                   </button>
-                 </form>
+                 <a href=""##confrimUserLink##"">
+                   <button>Confirm your e-mail address</button>
+                 </a>
                  <p>After the activation succeeded, you will be able to log in. Your default password is the following: <b>##temporaryKey##</b><br> For your safety, please change your password after the first successful login.</p>
                  <p>Please consider the displayed policy when choosing an appropriate password.</p>
                  <p>If you were not expecting to get an access to ez-booking and so this confirmation e-mail, please ignore this message.</p>
