# BookingWebAPI/BookingWebAPI.Infrastructure/ViewModels/EmailConfirmationResultViewModel.cs
@@ -1,0 +1,7 @@
+﻿namespace BookingWebAPI.Infrastructure.ViewModels
+{
+    public class EmailConfirmationResultViewModel
+    {
+        public bool Success { get; set; }
+    }
+}
