# BookingWebAPI/BookingWebAPI.Infrastructure/ViewModels/Mapping/ViewModelProfile.cs
@@ -1,4 +1,5 @@
 ﻿using AutoMapper;
+using BookingWebAPI.Common.Enums;
 using BookingWebAPI.Common.Models;
 using BookingWebAPI.Common.ViewModels;
 
@@ -14,11 +15,8 @@ namespace BookingWebAPI.Infrastructure.ViewModels.Mapping
             CreateMap<(BookingWebAPIUser, string), BookingWebAPIAuthenticationViewModel>()
                 .ForMember(vm => vm.User, o => o.MapFrom(authInfo => authInfo.Item1))
                 .ForMember(vm => vm.Token, o => o.MapFrom(authInfo => authInfo.Item2));
-            CreateMap<BookingWebAPIUserViewModel, BookingWebAPIUserConfirmationViewModel>()
-                .ForMember(cvm => cvm.User, o => o.MapFrom(uvm => uvm));
-            CreateMap<IEnumerable<BookingWebAPISetting>, BookingWebAPIUserConfirmationViewModel>()
-                .ForMember(cvm => cvm.PasswordSettings, o => o.MapFrom(s => s));
-            CreateMap<EmailConfirmationAttempt, BookingWebAPIUserConfirmationViewModel>();
+            CreateMap<EmailConfirmationAttempt, EmailConfirmationResultViewModel>()
+                .ForMember(r => r.Success, o => o.MapFrom(a => a.Status == EmailConfirmationStatus.Succeeded));
             CreateMap<BookingWebAPISetting, BookingWebAPISettingViewModel>();
         }
     }
